# workspace is required to vendor crates for all packages.
[workspace]
members = [
    "BLAKE3",
    "skim",
    "prql",
]
resolver = "2"

# enforce a specific version of `cxx`
[patch.crates-io]
cxx = "1.0.102"
cxx-build = "1.0.102"
cxxbridge-flags = "1.0.102"
cxxbridge-macro = "1.0.102"
link-cplusplus = "1.0.9"

# FIXME: even though the profiles should be defined in the main cargo config we
# cannot do this yet, since we compile each package separatelly, so you should
# ignore warning from cargo about this.
